--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,30 +3,27 @@ body {
     flex-direction: column;
     justify-content: center;
     align-content: center;
-
-    background: #000;
+    background: #fff;
     background-image: url(../img/bg1.jpg);
-    color: #fff;
+    color: #12349F;
     font-family: 'Roboto', sans-serif;
     font-size: 16px;
     line-height: 1.5;
     min-height: 100vh;
-    max-width: 100vw;
+    width: 100vw;
     margin: 0;
     padding: 0;
 }
 .p {
-    font-family: 'Arial Narrow Bold', sans-serif;
     font-size: 20px;
     text-transform: uppercase;
-    color: #6AB4B3;
+    color: rgba(18, 51, 159, 0.8);
 }
 ul {
     list-style: none;
     margin: 0;
     padding: 0;
     color: #12349F;
-    background: #fff;
 }
 label {
     color: #12349F;
@@ -35,15 +32,26 @@ label {
     text-transform: uppercase;
 }
 input {
+    text-align: center;
     color: #12349F;
-    width: 100%;
+    width: 60%;
     padding: 10px;
-    margin: 0 10px;
-    border-radius: 10px;
-    font-size: 15px;
+    margin: 0 auto;
+    font-size: 20px;
+}
+.gap {
+    margin: 0 1rem;
+}
+input[type=number]::-webkit-inner-spin-button {
+    cursor: pointer;
+    display: block;
+    width: 20px;
+    text-align: center;
+    position: relative;
+    background: transparent;
 }
 button {
-    color: #fff;
+    color: #fff!important;
     border-radius: 15px;
     background: #12349F!important;
     font-weight: 700;
@@ -54,12 +62,11 @@ button {
     transition: ease-in-out 0.3s;
 }
 button:hover {
-    background: #12349F!important;
-    color: #fff!important;
+    background: #fff!important;
+    color: #12349F!important;
 }
 .row {
     display: flex;
-    margin: 0 -15px;
 }
 .m1 {
     margin-top: 1rem;
@@ -69,17 +76,13 @@ button:hover {
     margin: 0 auto;
 }
 .border {
-    border: 1px solid #6AB4B3;
+    border: 1px solid #12349F;
     padding: 5px;
 }
 .center {
     display: flex;
     justify-content: center;
     align-content: center;
-}
-.justifyspacebetween {
-    display: flex;
-    justify-content: space-between;
 }
 .col {
     display: flex;
@@ -90,49 +93,62 @@ main {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    width: 100%;
-    max-width: 100vw;
-    overflow: hidden;margin: 0;
+    width: 100vw;
+    min-height: 100vh;
+    margin: 0;
 }
 .container {
     display: flex;
-    flex-wrap: wrap;
     flex-direction: column;
     justify-content: center;
     align-content: center;
-    width: 50vw;
-    height: 100%;
-    max-width: 1200px;
+    width: 60%;
+    min-height: 60vh;
     margin: 0 auto;
     padding: 20px;
-    background: rgba(255, 255, 255, 0.9);
-    border: 5px solid #12349F;
-    border-radius: 15px;
+    background: rgba(255, 255, 255, 0.8);
+    border: 10px solid #12349F;
+    border-radius: 20px;
 }
+
 header {
     display: flex;
     justify-content: center;
+    align-content: center;
     width: 100%;
-    max-width: 1200px;
+    margin: 1rem auto;
     padding: 20px;
-    text-align: center;
+}
+button.btn.active {
+    background: #fff!important;
+    color: #12349F!important;
+}
+nav {
+    display: flex;
+    justify-content: center;
+    align-content: center;
+    width: 100%;
     margin: 0 auto;
 }
-
-.nav {
+nav ul {
+    display: flex;
     justify-content: center;
-    align-items: center;
-}
-.nav button {
-    margin: 0 5px;
-    border-radius: 15px;
-    font-size: 15px;
+    align-content: center;
+    width: 100%;
+    margin: 0 auto;
+    padding: 20px;
 }
 /*** CLOCK ***/
 
 .clock {
     text-align: center;
     font-size: 100px;
+    font-weight: 700;
+    color: #12349F;
+}
+.dateDisplay {
+    text-align: center;
+    font-size: 20px;
     font-weight: 700;
     color: #12349F;
 }
@@ -154,7 +170,7 @@ header {
     color: #12349F;
 }
 #startStop, #reset {
-    margin: 0 5px;
+    margin: 0 auto;
 }
 /*** ALARM ***/
 
@@ -175,31 +191,19 @@ header {
     font-weight: 700;
     color: #12349F;
 }
-
 form {
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-content: center;
     flex-wrap: wrap;
-    margin: 1rem auto;
     width: 100%;
-    max-width: 1200px;
 }
-input#alarmTime {
-    width: 50%;
-    border: 1px solid #12349F;
-    color: #12349F;
-    padding: 10px;
-    margin: 0 auto;
-    border-radius: 15px;
-    font-size: 15px;
-}
-
 #alarmMessage {
-    font-size: 30px;
+    font-size: 20px;
     font-weight: 700;
     color: #12349F;
+    border: 1px solid #12349F;
     background: #fff;
 }
 .alarmButton {
@@ -215,13 +219,13 @@ div#popup {
     margin: auto;
     background: rgba(18, 51, 159, 0.8);
     position: absolute;
-    width: 75%;
-    height: 50%;
+    width: 900px;
+    height: 400px;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
     text-align: center;
-    padding-top: 300px;
+    padding-top: 10%;
     border-radius: 15px;
 }
 
@@ -242,6 +246,7 @@ div#popup {
     cursor: pointer;
 }
 /*** CHRONO ***/
+
 #tourList {
     display: none;
 }
@@ -251,4 +256,88 @@ div#popup {
     font-size: 20px;
     font-weight: 700;
     color: #12349F;
+}
+footer {
+    display: flex;
+    justify-content: center;
+    align-content: center;
+    color: #12349F;
+    width: 100%;
+    margin: 1rem auto;
+    padding: 20px;
+}
+
+/*** MEDIA QUERIES ***/
+
+@media screen AND (max-width: 768px) {
+    .container {
+        width: 60%;
+    }
+    button {
+        color: #fff!important;
+        border-radius: 15px;
+        background: #12349F!important;
+        font-weight: 700;
+        font-size: 13px;
+        text-transform: uppercase;
+        padding: 5px 10px;
+        margin: 0 10px;
+        transition: ease-in-out 0.3s;
+    }
+    .p {
+        font-size: 13px;
+        text-transform: uppercase;
+        color: rgba(18, 51, 159, 0.8);
+    }
+    header {
+        display: flex;
+        justify-content: center;
+        align-content: center;
+        width: 100%;
+        margin: 1rem auto;
+        padding: 0px;
+    }
+    nav {
+        display: flex;
+        justify-content: center;
+        align-content: center;
+        width: 100%;
+        margin: 0 auto;
+    }
+    nav ul {
+        display: flex;
+        justify-content: center;
+        align-content: center;
+        width: 90%;
+        margin: 0 auto;
+        padding: 10px;
+    }
+    .clock {
+        text-align: center;
+        font-size: 35px;
+        font-weight: 700;
+        color: #12349F;
+    }
+    .timer {
+        text-align: center;
+        font-size: 35px;
+        font-weight: 700;
+        color: #12349F;
+    }
+    div#popup {
+        display: none;
+        color: #fff!important;
+        font-size: 2rem;
+        margin: auto;
+        background: rgba(18, 51, 159, 0.8);
+        position: absolute;
+        width: 80%;
+        height: 50%;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        text-align: center;
+        padding-top: 10%;
+        border-radius: 15px;
+    }
 }
